@@ -1,5 +1,8 @@
 2001-09-24  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/bsd/ulimit.c (ulimit): Handle overflow in
+	UL_SETFSIZE computations better.
+
 	* rt/Makefile: Remove use of filter for librt again.
 
 	* sysdeps/unix/sysv/linux/ulimit.c (__ulimit): Handle overflow in
